# openswitch

./: OpenSwitch.html  dialogs.html  index.html  option-console.jsx  package-lock.json  package.json  plan.md  shared.jsx  tsconfig.app.json  tsconfig.node.json  vite.config.ts
.github/workflows/: build-windows.yml
src/: AddCredentialDialog.tsx  AddEnvironmentDialog.tsx  BrandTile.tsx  OpenSwitchConsole.tsx  PathsModal.tsx  api.ts  brand.ts  data.ts  i18n.ts  main.tsx  styles.css  ui.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  error.rs  lib.rs  main.rs  model.rs  paths.rs  state.rs  switcher.rs
src/components/: CliPreviewDrawer.tsx  EnvironmentMenu.tsx  ToolColumn.tsx  TopBar.tsx
