[package]
name = "openswitch"
version = "0.1.0"
description = "CLI authorization switcher"
authors = ["OpenSwitch"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "openswitch_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
parking_lot = "0.12"

[features]
# no custom features

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
